--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,4 +7,9 @@
     <title>Project 2 Auth</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/users/new">Sign up</a></li>
+        </ul>
+    </nav>
     <h1>Express auth boilerplate for p2</h1>
