--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,9 @@
 <body>
     <nav>
         <ul>
+            <li><a href='/'>Home</a></li>
             <li><a href="/users/new">Sign up</a></li>
+            <li><a href='/users/login'>Login</a></li>
         </ul>
     </nav>
     <h1>Express auth boilerplate for p2</h1>
