--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
 <h3>Login to your account</h3>
 
 <% if (message) { %>
-    <p><$= message %></p>
+    <p><%= message %></p>
 <% } %>
 
 <form action="/users/login" method="POST">
