--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header.ejs', { user }) %>
 
-<h2>welcome home user</h2>
+<h1>Welcome to dotify</h1>
+<h3>The best music app on a budget</h3>
+<h4>Sign up or log in to Continue</h4>
+<button><a href="/users/new">Sign up</a></button>
+<button><a href='/users/login'>Login</a></button>
+
 
 <%- include('partials/footer.ejs') %>
