--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,22 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2 Auth</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>dotify</title>
 </head>
 <body>
     <nav>
         <ul>
             <!-- show home whether the user is logged in or not -->
-            <li><a href='/'>Home</a></li>
             <% if (user) { %>
+                <li><a href='/songs'>Home</a></li>
                 <!-- show these if user is logged -->
-                <li><a href='/users/profile'>Profile</a></li>
+                <li><a href='../faves.ejs'>Favorites</a></li>
+                <h3><%= user.email %></h3>
                 <li><a href='/users/logout'>Logout</a></li>
            <% } else { %>
-                <!-- show these if user not logged in -->
+                <!-- show these if user not logged in --> 
+                <li><a href='/'>Home</a></li>
                 <li><a href="/users/new">Sign up</a></li>
                 <li><a href='/users/login'>Login</a></li>
            <% } %>
         </ul>
     </nav>
-    <h1>Express auth boilerplate for p2</h1>
+
+
+
+
+
+
+
+
+
+    
+    <!-- can we use a if else statement with bootstrap? how to make images work? -->
+    <!-- start of navbar -->
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/img/logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Home
+              </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Favorites</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/profile">Pofile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/logout">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav> -->
+    <!-- end of navbar -->
+
+
+
+    
+      
+
+ 
