--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -1,17 +1,30 @@
 <%- include('../views/partials/header.ejs', { user }) %>
 
 <div>
+<h1>Top 100 Charts</h1>
 <% songs.forEach(function(song) { %>
     <div class="well">
+      <img src="<%= song['im:image'][2].label %>" />  
       <h2><%= song['im:name'].label %></h2>
+      <h4><%= song['im:artist'].label %></h4>
       <form method="POST" action="/favorites">
         <input hidden type="text" name="name" value="<%= song.name %>">
         <button class="btn btn-primary" type="submit">Add to Favorites</button>
+      </form>
+      <form method="GET" action="/songs">
+        <input hidden type="text" name="name" value="<%= song.name %>">
+        <button class="btn btn-primary" type="submit">See more info</button>
       </form>
     </div>
   <% }); %>
 </div>
 
+
+
+
+
+
+<%- include('../views/partials/footer.ejs') %>
 
 
 
