--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,5 +1,20 @@
 <%- include('../partials/header', { user }) %>
 
-<h3>Show specific song detail</h3>
+<% songs.forEach(function(song) {  %>
+    <div class="well">
+      <img src="<%= song['im:image'][2].label %>" />  
+      <h2><%= song['im:name'].label %></h2>
+      <h2><%= song['im:artist'].label %></h2>
+      <h3><%= song['im:artist'].label %></h3>
+      <h3><%= song['im:artist'].label %></h3>
+      
+
+    </div>
+ <% }) %>
+
+ release date
+
+
 
 <%- include('../partials/footer') %>
+
