routes all done and starting models

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,14 +5,24 @@
       <img src="<%= song['im:image'][2].label %>" />  
       <h2><%= song['im:name'].label %></h2>
       <h2><%= song['im:artist'].label %></h2>
-      <h3><%= song['im:artist'].label %></h3>
-      <h3><%= song['im:artist'].label %></h3>
-      
-
+      <h3><%= song.category.attributes.term %></h3>      
+      <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Buy now for <%= song['im:price'].label %> on apple music</a></h3>
     </div>
  <% }) %>
 
- release date
+ <div>
+  <h2>Share your opinions down below:</h2>
+  <form method="POST" action="/songs/:name">
+    <label for="dinosaurName">Name</label>
+    <input id="dinosaurName" type="text" name="name">
+  
+    <input type="submit">
+  </form>
+  <h2>Comments</h2>
+ </div>
+
+ 
+
 
 
 
