--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
             <% if (user) { %>
                 <li><a href='/songs'>Home</a></li>
                 <!-- show these if user is logged -->
-                <li><a href='/faves'>Favorites</a></li>
+                <li><a href='/favorites'>Favorites</a></li>
                 <h3><%= user.email %></h3>
                 <li><a href='/users/logout'>Logout</a></li>
            <% } else { %>
