--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,10 +37,10 @@
     
     <!-- can we use a if else statement with bootstrap? how to make images work? -->
     <!-- start of navbar -->
-    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="img/logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Home
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,8 +60,10 @@
             </ul>
           </div>
         </div>
-      </nav> -->
+      </nav>
     <!-- end of navbar -->
+
+   
 
 
 
