--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
     
     <!-- can we use a if else statement with bootstrap? how to make images work? -->
     <!-- start of navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -60,7 +60,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> -->
     <!-- end of navbar -->
 
    
