--- a/views/faves.ejs
+++ b/views/faves.ejs
@@ -11,10 +11,17 @@
             <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
             <button class="btn btn-primary" type="submit">Remove from Favorites</button>
           </form>
-          <form method="GET" action="/favorites">
-            <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
-            <button class="btn btn-primary" type="submit">See more info</button>
-          </form>
+
+          <form method="GET" action="/songs/<%= song['im:name'].label %>">
+        <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
+        <input hidden type="text" name="artist" value="<%= song['im:artist'].label %>">
+        <input hidden type="text" name="genre" value=" <%= song.category.attributes.term %>">
+
+        <input hidden type="text" name="price" value="<%= song['im:price'].label %>">
+        <input hidden type="image" name="image" src="<%= song['im:image'][2].label %>">
+        
+        <button class="btn btn-primary" type="submit">See more info</button>
+      </form>
         </div>
       <% }); %>
     </div>
