q got song to match with user, almost done

--- a/views/faves.ejs
+++ b/views/faves.ejs
@@ -5,23 +5,13 @@
     <h1>Your Favorites</h1>
     <% favorites.forEach(function(song) { %>
         <div class="well">
+         <% if (typeof song.songName!=undefined) { %>
           <h2><%= song.songName %></h2>
-          <h4><%= song.genre %></h4>
-          <form method="POST" action="/songs/<%= song['im:name'].label %>/?_method=DELETE"></form>
-            <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
+          <form method="POST" action="/favorites?_method=DELETE">
+            <input hidden type="text" name="songId" value="<%= song.id %>">
             <button class="btn btn-primary" type="submit">Remove from Favorites</button>
           </form>
-
-          <form method="GET" action="/songs/<%= song['im:name'].label %>">
-        <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
-        <input hidden type="text" name="artist" value="<%= song['im:artist'].label %>">
-        <input hidden type="text" name="genre" value=" <%= song.category.attributes.term %>">
-
-        <input hidden type="text" name="price" value="<%= song['im:price'].label %>">
-        <input hidden type="image" name="image" src="<%= song['im:image'][2].label %>">
-        
-        <button class="btn btn-primary" type="submit">See more info</button>
-      </form>
+       <% } %>
         </div>
       <% }); %>
     </div>
@@ -30,5 +20,3 @@
 
 
 <%- include('../views/partials/footer.ejs') %>
-
-
