--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -2,14 +2,27 @@
 
 <h3>Sign up for an account</h3>
 
-<form action="/users" method="POST">
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email" />
+<form class="form card" action="/users" method="POST">
+    <div class="card_header">
+      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M4 15h2v5h12V4H6v5H4V3a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-6zm6-4V8l5 4-5 4v-3H2v-2h8z" fill="currentColor"></path>
+      </svg>
+      <h1 class="form_heading">Sign in</h1>
+    </div>
+    <div class="field">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Email" name="email" class="input">
+    </div>
+    <div class="field">
+      <label for="password">Password</label>
+      <input type="password" id="password" placeholder="Password" name="password" class="input">
+    </div>
+    <div class="field">
+      <button type="submit" class="button">Sign Up</button>
+    </div>
+  </form>
 
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" />
-
-    <button type="submit">Sign up</button>
-</form>
 
 <%- include('../partials/footer.ejs') %>
+
