--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -3,11 +3,14 @@
 <div>
 <h1>Top 100 Charts</h1>
 <% songs.forEach(function(song) { %>
-    <div class="well">
-      <img src="<%= song['im:image'][2].label %>" />  
-      <h2><%= song['im:name'].label %></h2>
-      <h4><%= song['im:artist'].label %></h4>
-      <h3><%= song.category.attributes.term %></h3>      
+  <div class="cards well position-absolute top-0 start-50 translate-middle"></div>
+    <div class="card-image">
+      <img src="<%= song['im:image'][2].label %>" /> 
+    </div>
+    <div class="category"> <%= song['im:name'].label %> </div>
+    <div class="category"> Artist: <%= song['im:artist'].label %> </div>
+    <div class="category"> Genre: <%= song.category.attributes.term %> </div>
+  </div>
       <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Buy now for <%= song['im:price'].label %> on apple music</a></h3>
       <form method="POST" action="/favorites">
         <input hidden type="text" name="name" value="<%= song['im:name'].label %>">
@@ -20,6 +23,8 @@
 </div>
 
 <%- include('../views/partials/footer.ejs') %>
+
+
 
 
 
