--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -16,11 +16,11 @@
     </div>
     <div class="field">
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Email" name="email" class="input">
+      <input autocomplete="off" type="email" id="email" placeholder="Email" name="email" class="input">
     </div>
     <div class="field">
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Password" name="password" class="input">
+      <input autocomplete="off" type="password" id="password" placeholder="Password" name="password" class="input">
     </div>
     <div class="field">
       <button type="submit" class="button">Log in</button>
