added put route, updating password

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/favorites">Favorites</a>
               </li>
-              <h3 class="nav-item"><%= user.email %></h3>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/profile"><%= user.email %></a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
               </li>
