trying to figure out bootstrap css

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,16 +1,16 @@
-body  {
+/* body  {
   text-align: center;
 }
 
 .card {
-    /* width: 190px; */
+    /* width: 190px; 
     width: 1900px;
     height: 254px;
-    /* background: #F4F6FB; */
+    /* background: #F4F6FB; 
     border: 1px solid white;
     /* box-shadow: 10px 10px 64px 0px rgba(180, 180, 207, 0.75);
     -webkit-box-shadow: 10px 10px 64px 0px rgba(186, 186, 202, 0.75);
-    -moz-box-shadow: 10px 10px 64px 0px rgba(208, 208, 231, 0.75); */
+    -moz-box-shadow: 10px 10px 64px 0px rgba(208, 208, 231, 0.75); 
   }
   
   .form {
@@ -109,5 +109,20 @@ body  {
     cursor: pointer;
   }
   
+  */
 
- 
+* {
+  border: dotted black 1px;
+}
+
+ body {
+  align-items: center;
+  text-align: center;
+ }
+
+
+
+/*
+<div class="cards well position-absolute top-0 start-50 translate-middle"></div>
+
+line 6^ */
