--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -2,19 +2,19 @@
 
 <div>
 <h1>Top 100 Charts</h1>
-    <div class="d-flex align-content-start flex-wrap">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
       <% songs.forEach(function(song) { %>
-      <div class="card" style="width: 11rem;">
+      <div class="card" style="width: 15rem;">
           <img class="card-img-top" src="<%= song['im:image'][2].label %>" /> 
         <div class="card-body">
-          <h5 class="card-title"> <%= song['im:name'].label %> </h5>
-          <p class="card-text"> Artist: <%= song['im:artist'].label %> </p>
-          <p class="card-text"> Genre: <%= song.category.attributes.term %> </p>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">Buy Now $1.29</a>
-          <form method="POST" action="/favorites">
+          <h5 class="card-title colorC"> <%= song['im:name'].label %> </h5>
+          <p class="card-text colorC"> Artist: <%= song['im:artist'].label %> </p>
+          <p class="card-text colorC"> Genre: <%= song.category.attributes.term %> </p>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn addT colorC borderBC">Buy Now $1.29</a>
+          <form class="addC" method="POST" action="/favorites">
             <input autocomplete="off" hidden type="text" name="name" value="<%= song['im:name'].label %>">
             <input autocomplete="off" hidden type="text" name="genre" value="<%= song.category.attributes.term %>">
-            <button class="btn btn-primary" type="submit">Add to Favorites</button>
+            <button class="btn colorC borderBC" type="submit">Add to Favorites</button>
           </form>
         </div> 
       </div>
