--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -2,9 +2,10 @@
 
 <div>
 <h1>Top 100 Charts</h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <!-- <div class="row row-cols-1 row-cols-md-4 g-4"> -->
+    <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
       <% songs.forEach(function(song) { %>
-      <div class="card" style="width: 15rem;">
+      <div class="card" style="width: 14rem;">
           <img class="card-img-top" src="<%= song['im:image'][2].label %>" /> 
         <div class="card-body">
           <h5 class="card-title colorC"> <%= song['im:name'].label %> </h5>
