--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -6,14 +6,7 @@
     <p><%= message %></p>
 <% } %>
 
-<form class="form card" action="/users/login" method="POST">
-    <div class="card_header">
-      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M4 15h2v5h12V4H6v5H4V3a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-6zm6-4V8l5 4-5 4v-3H2v-2h8z" fill="currentColor"></path>
-      </svg>
-      <h1 class="form_heading">Log in</h1>
-    </div>
+<form class="form" action="/users/login" method="POST">
     <div class="field">
       <label for="email">Email</label>
       <input autocomplete="off" type="email" id="email" placeholder="Email" name="email" class="input">
